--- a/GD2/set-work-calendar/src/app/components/layout/the-funtion/the-funtion.component.html
+++ b/GD2/set-work-calendar/src/app/components/layout/the-funtion/the-funtion.component.html
@@ -29,7 +29,7 @@
     </div>
     <div class="m-fuction-right">
         <div class="m-button-group m-button-group-add m-button-combo">
-            <div class="m-button m-button-add m-button-combo-item">
+            <div class="m-button m-button-add m-button-combo-item" (click)="addEvent()">
                 <div class="m-icon-add"></div>
                 Thêm
             </div>
